--- a/css/sections.css
+++ b/css/sections.css
@@ -111,18 +111,25 @@ header {
 
 .section-list {
   display: grid;
-  grid-template-columns: repeat(2, 400px);
-  grid-template-rows: repeat(2, 280px);
+  grid-template-columns: repeat(3, 350px);
+  grid-template-rows: repeat(3, 260px);
   justify-content: center;
   align-items: stretch;
   gap: 1.5rem;
   padding: 50px;
 }
 
+@media(max-width: 80rem) {
+  .section-list {
+    grid-template-columns: repeat(2, 350px);
+    grid-template-rows: repeat(4, 260px);
+  }
+}
+
 @media(max-width: 47rem) {
   .section-list {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 280px);
+    grid-template-rows: repeat(8, 260px);
     padding: 0 20px;
     gap: 1rem;
   }
@@ -141,7 +148,7 @@ header {
 
 .section-list .section img {
   width: 100%;
-  height: 140px;
+  height: 120px;
   object-fit: cover;
   border-radius: 5px;
   flex-shrink: 0;
@@ -150,7 +157,7 @@ header {
 .section {
   opacity: 0.7;
   transition: 0.3s ease;
-  height: 280px;
+  height: 260px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -170,10 +177,10 @@ header {
 
 .section h2 {
   font-weight: 400;
-  font-size: 24px;
-  margin-bottom: 0.5rem;
+  font-size: 20px;
+  margin-bottom: 0.3rem;
   line-height: 1.2;
-  min-height: 60px;
+  min-height: 50px;
   display: flex;
   align-items: center;
   text-align: center;
