--- a/css/style.css
+++ b/css/style.css
@@ -62,26 +62,28 @@ h1, h2 {
 }
 
 .army-logo {
-  margin: auto;
+  margin: 0 auto 2rem auto;
 }
 
 .welcome-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   color: #fff;
   min-height: 100vh;
-  padding: 20px;
+  padding: 60px 20px 40px 20px;
+  padding-top: 10vh; /* Move content up from center */
 }
 
 /* Mobile portrait adjustments */
 @media (max-width: 768px) and (orientation: portrait) {
   .welcome-container {
     min-height: 100vh;
-    justify-content: space-evenly;
-    padding: 40px 20px;
+    justify-content: flex-start;
+    padding: 8vh 20px 40px 20px;
+    padding-top: 8vh;
   }
   
   .welcome-container .army-logo img {
@@ -109,20 +111,18 @@ h1, h2 {
 
 .welcome-container .logo-content {
   width: 60%;
-  margin: auto;
-  margin-bottom: 1rem;
+  margin: 0 auto 1.5rem auto;
   font-style: 'cinzel';
   font-weight: 300;
 }
 
 .welcome-container .welcome-heading {
   width: 70%;
-  margin: auto;
-  margin-bottom: 1rem;
+  margin: 0 auto 1.5rem auto;
 }
 
 .welcome-container .welcome-description {
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
   font-family: 'noto sans' sans-serif;
 }
 
