--- a/css/sections.css
+++ b/css/sections.css
@@ -23,6 +23,7 @@ header {
 .page-header {
   display: flex;
   justify-content: center;
+  margin-top: 30px;
   margin-bottom: 20px;
   padding: 0 20px;
 }
