--- a/css/gradient-transition.css
+++ b/css/gradient-transition.css
@@ -29,6 +29,8 @@ body {
   justify-content: center;
   position: relative;
   flex-shrink: 0;
+  flex-grow: 0;
+  min-width: 12.5%;
 }
 
 /* Individual background images for each decade */
